Fixed image on mobile

--- a/style.css
+++ b/style.css
@@ -12,7 +12,9 @@ div {
 }
   
 img {
-    height: 1102px;
+	max-width: 100%;
+    max-height: 200vh;
+    height: auto;
 
 	box-sizing: border-box;
 	overflow: hidden;
